modificació del css 25/04 a les 12:52

--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -271,4 +271,8 @@ body {
     margin-top: -10px;
   }
 
-  
+  .dropemail{
+    border-radius: 25%;
+    background-color: #d4dbe1;
+    color: #474a4e;
+  }
