modificació del css 25/04 a les 13:00

--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -272,7 +272,7 @@ body {
   }
 
   .dropemail{
-    border-radius: 25%;
-    background-color: #d4dbe1;
-    color: #474a4e;
+    border-radius: 25px !important;
+    color: #c9d1d7;
+    width: 15vw !important;
   }
