modificació del css 25/04 a les 13:05

--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -273,6 +273,8 @@ body {
 
   .dropemail{
     border-radius: 25px !important;
-    color: #c9d1d7;
+    color: #70757a;
     width: 15vw !important;
+    height: 5vh !important;
+    text-align: center;
   }
