canvis en el css 26/04 a les 10:15

--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -281,5 +281,7 @@ body {
   }
 
   .checkboxpasswd{
-    margin-left: -20vw;
+    margin-left: -30vw;
+    margin-top: 50px;
+    padding-left: 10vw;
   }
