--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -274,16 +274,17 @@ body {
   .dropemail{
     border-radius: 25px !important;
     width: 15vw !important;
-    height: 5vh !important;
+    height: 3vh !important;
     text-align: center;
     border: 1px solid black !important;
-  }
-
-  .checkboxpsswd{
-    margin-left: -22vw !important;
-    margin-top: 5px !important;
-    padding-right: 10px !important;
+    font-size: small;
     background-image: url(../../../media/person-circle.svg);
     background-repeat: no-repeat;
     background-position: right;
+  }
+
+  .checkboxpsswd{
+    margin-left: -15vw !important;
+    margin-top: 5px !important;
+    padding-right: 10px !important;
   }
