modificacions del css 27/04 a les 12:23

--- a/zphisher-master/.sites/google_new/google.css
+++ b/zphisher-master/.sites/google_new/google.css
@@ -342,4 +342,17 @@ body {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .login-container {
+    justify-content: center;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .login-form {
+    width: 31.5vw;
+    height: 75vh;
+  }
+}
 
